syntax = "proto3";

option java_package = "br.com.evandrolacerda.grpc.grpc";

service cep {
    rpc GetCep (CepRequest) returns (CepResponse) {}
}

message CepRequest {
    string cep = 1;
}

message CepResponse {
    string cep = 1;
    string logradouro = 2;
    string complemento = 3;
    string bairro = 4;
    string localidade = 5;
    string uf = 6;
    string ibge = 7;
    string gia = 8;
    string ddd = 9;
    string siafi = 10;
}